<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextUsernameSignIn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="182dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Username"
            />

        <EditText
            android:id="@+id/editTextPasswordLogIn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextUsernameSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPasswordLogIn"
            android:layout_alignRight="@+id/editTextPasswordLogIn"
            android:text="@string/LogIn" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_alignRight="@+id/loginButton"
            android:text="@string/Register" />


    </RelativeLayout>

</LinearLayout>