<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/RegisterEditTextUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/RegisterEditTextPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/RegisterEditTextUsername"
            android:layout_alignRight="@+id/RegisterEditTextUsername"
            android:layout_marginTop="25dp"/>

        <EditText
            android:id="@+id/RegisterEditTextConfirm"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Confirm"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/RegisterEditTextPassword"
            android:layout_alignRight="@+id/RegisterEditTextUsername"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/RegisterButtonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:layout_alignEnd="@+id/RegisterEditTextUsername"
            android:layout_below="@+id/RegisterEditTextConfirm"
            android:layout_marginTop="25dp"/>
    </RelativeLayout>
</RelativeLayout>