<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stapp.activities.AnswerAssignmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questionPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_colon"
            android:textSize="24sp"
            android:textStyle="bold"

            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="16dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/questionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/sample_question"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/answerGroup"
                tools:layout_editor_absoluteX="16dp" />
        </ScrollView>

        <RadioGroup
            android:id="@+id/answerGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="256dp">

        </RadioGroup>

        <Button
            android:id="@+id/answerQuestion"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:onClick="answerCurrentQuestion"
            android:text="@string/next_question"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="447dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
